# experiment3

./: pyproject.toml  requirements.txt
src/: tmp4.py
src/exp1/: tmp2.py
src/exp2/: tmp3.py
src/experiment3/: tmp1.py
