[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment-pack"
version = "0.1.0"
description = "Internal experiments library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [  # только прямые зависимости (то, что вы реально импортируете).
  "numpy>=2.0",
  "pandas>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"} # говорит, что импортируемые пакеты живут в src/

[tool.setuptools.packages.find]
where = ["src"]
